--- a/.github/workflows/mikrotik_patch_7.yml
+++ b/.github/workflows/mikrotik_patch_7.yml
@@ -1,5 +1,7 @@
 name: Patch Mikrotik RouterOS 7.x
 on:
+  # push:
+  #   branches: [ "main" ]
   schedule:
     - cron: "0 0 * * *"
   workflow_dispatch:
@@ -40,8 +42,8 @@ jobs:
     runs-on: ubuntu-22.04
     strategy:
       matrix:
-        arch: [x86]
-        channel: [stable]
+        arch: [x86,arm64]
+        channel: [stable, testing]
     env:
       TZ: 'Asia/Shanghai'
       LATEST_VERSION: ""
@@ -86,8 +88,62 @@ jobs:
         fi
         sudo apt-get update > /dev/null
 
-    - name: Get netinstall ${{ env.LATEST_VERSION }}
+    - name: Cache Squashfs
+      if: steps.get_latest.outputs.has_new_version == 'true'
+      id: cache-squashfs
+      uses: actions/cache@v4
+      with:
+        path: |
+          python3.sfs
+          option.sfs
+        key: busybox-python3-squashfs-${{ matrix.arch }}
+
+    - name: Create Squashfs for option and python3
+      if: steps.get_latest.outputs.has_new_version == 'true' && steps.cache-squashfs.outputs.cache-hit != 'true'
+      run: |
+        sudo mkdir -p ./option-root/bin/
+        if [ "${{ matrix.arch }}" == "x86" ]; then
+          sudo cp busybox/busybox_x86 ./option-root/bin/busybox
+          sudo chmod +x ./option-root/bin/busybox
+          sudo cp keygen/keygen_x86 ./option-root/bin/keygen
+          sudo chmod +x ./option-root/bin/keygen
+        elif [ "${{ matrix.arch }}" == "arm64" ]; then
+          sudo cp busybox/busybox_aarch64 ./option-root/bin/busybox
+          sudo chmod +x ./option-root/bin/busybox
+          sudo cp keygen/keygen_aarch64 ./option-root/bin/keygen
+          sudo chmod +x ./option-root/bin/keygen
+        fi
+        sudo chmod +x ./busybox/busybox_x86
+        COMMANDS=$(./busybox/busybox_x86 --list)
+        for cmd in $COMMANDS; do
+            sudo ln -sf /pckg/option/bin/busybox ./option-root/bin/$cmd
+        done
+        sudo mksquashfs option-root option.sfs -quiet -comp xz -no-xattrs -b 256k
+        sudo rm -rf option-root
+        if [ "${{ matrix.arch }}" == "x86" ]; then
+          sudo wget -O cpython.tar.gz -nv https://github.com/indygreg/python-build-standalone/releases/download/20241016/cpython-3.11.10+20241016-x86_64-unknown-linux-musl-install_only_stripped.tar.gz
+        elif [ "${{ matrix.arch }}" == "arm64" ]; then
+          sudo wget -O cpython.tar.gz -nv https://github.com/indygreg/python-build-standalone/releases/download/20241016/cpython-3.11.10+20241016-aarch64-unknown-linux-gnu-install_only_stripped.tar.gz
+        fi
+        sudo tar -xf cpython.tar.gz
+        sudo rm cpython.tar.gz
+        sudo rm -rf ./python/include
+        sudo rm -rf ./python/share
+        sudo mksquashfs python python3.sfs -quiet -comp xz -no-xattrs -b 256k
+        sudo rm -rf ./python
+
+    - name: Cache NetInstall ${{ env.LATEST_VERSION }}
       if: steps.get_latest.outputs.has_new_version == 'true' && matrix.arch == 'x86'
+      id: cache-netinstall
+      uses: actions/cache@v4
+      with:
+        path: |
+          netinstall.zip
+          netinstall.tar.gz
+        key: netinstall-${{ env.LATEST_VERSION }}
+
+    - name: Get netinstall ${{ env.LATEST_VERSION }}
+      if: steps.get_latest.outputs.has_new_version == 'true' && matrix.arch == 'x86' && steps.cache-netinstall.outputs.cache-hit != 'true'
       run: |
         sudo wget -nv -O netinstall.zip https://download.mikrotik.com/routeros/$LATEST_VERSION/netinstall-$LATEST_VERSION.zip
         sudo wget -nv -O netinstall.tar.gz https://download.mikrotik.com/routeros/$LATEST_VERSION/netinstall-$LATEST_VERSION.tar.gz
@@ -377,4 +433,3 @@ jobs:
           install-image-${{ env.LATEST_VERSION }}.zip
           routeros-${{ env.LATEST_VERSION }}${{ env.ARCH }}.npk
           all_packages-*-${{ env.LATEST_VERSION }}.zip
-
