--- a/.github/workflows/mikrotik_patch_7.yml
+++ b/.github/workflows/mikrotik_patch_7.yml
@@ -43,7 +43,7 @@ jobs:
     strategy:
       matrix:
         arch: [x86,arm64]
-        channel: [stable, testing]
+        channel: [stable]
     env:
       TZ: 'Asia/Shanghai'
       LATEST_VERSION: ""
